# TraderCS4398

./: .gitignore  Account.cpp  Account.h  AccountActivityLog.cpp  AccountActivityLog.h  Algorithmic_Trader  Bar.h  CMakeLists.txt  Makefile  Menus.h  README.md  Stock.cpp  Stock.h  StrategyRunner.h  csvAAPL.csv  csvBAC.csv  csvMSFT.csv  csvORCL.csv  csvToVector.h  d.cpp  doubleEmaCross.h  doubleSmaCross.h  driver.cpp  emaCross.h  enums.h  eurusd1m.csv  indicator.h  main.cpp  menus.h  parameterOptimize.h  parser  processCSV.cpp  processCSV.h  signal_t.h  smaCross.h  strat.h  test.txt  unitTests  unitTests.cpp
old_parser/: csvToVector.h
parser/: Makefile  parser  processCSV.cpp  processCSV.h  readingCSV.cpp  readingCSV_old.cpp  test  test_driver.cpp
